--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.section-title{
+    text-align: center;
+    margin: 2rem 0;
+    font-size: 2rem;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+    margin: 0 auto;
+    max-width: 1560px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
 }
