--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -8,9 +8,10 @@
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: calc(100vh - 200px);
+    height: 90vh;
     position: relative;
     margin: 0 auto;
+    padding: 20px 0;
 }
 .main-container .main-content{
     width: 50%;
