--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,28 +1,36 @@
 .nav-container {
-  width: 100%;
-  height: 100px;
   position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
-  z-index: 99999;
+  z-index: 9999999;
+  height: 120px;
+}
+.nav-container.active{
   background-color: #fce8bd;
 }
 .nav-container .container {
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  align-items: center;
   width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 .nav-lists {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 70%;
   align-items: center;
+  margin: 0 auto;
 }
 .nav-lists a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
     font-size: 1.2rem;
+}
+.nav-lists.active a{
+  color: #000;
 }
 .nav-lists .nav-logo {
   width: 150px;
