--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -52,7 +52,7 @@
   width: 100%;
   margin: 0 auto;
   display: grid;
-  height: 300px;
+  min-height: 300px;
   position: relative;
 }
 .company .company-img{
@@ -60,7 +60,7 @@
 }
 .company .company-img img{
   width: 100%;
-  height: 400px;
+  max-height: 500px;
 }
 .company .company-statistics{
   display: flex;
