--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -12,7 +12,7 @@
     width: 40%;
     position: absolute;
     left: 15%;
-    top: 5%;
+    top: 10%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -48,6 +48,7 @@
     border-radius: 20px;
     background-color: #bcb6b6af;
     transition: 0.5s;
+    cursor: pointer;
 }
 .contact-form .form-sending:hover{
     background:#605c5c6f;
