--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 2rem;
 }
 .main-content h1{
     font-size: 4.5rem;
