--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .section-title{
     text-align: center;
     margin: 2rem 0;
@@ -6,7 +12,6 @@
 .container{
     margin: 0 auto;
     max-width: 1560px;
-}
-*{
-    scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
 }
