--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -45,28 +45,23 @@
 .checkbox-btn{
     display: none;
 }
-.nav-lists .nav-languages{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-}
 
-.nav-languages .languages{
-    position: absolute;
-    top: 30px;
-    left: -15px;
-    display: grid;
-    width: 60px;
-    background-color: #2c3442;
-    justify-content: center;
-    transition: 1s all ease;
-    padding: 5px;
-    border-radius: 10px;
-    gap: 10px;
-    z-index: 999;
+
+.nav-languages{
+  border: none;
+  background: none;
+  color: #fff;
+  appearance: none;
+  font-size: 20px;
+  width: 60px;
+  text-align: center;
+  cursor: pointer;
 }
-.languages a{
-    color: #fff;
+.nav-languages option{
+  background-color: #2c3443;
+  cursor: pointer;
+  color: #fff;
+}
+.nav-container.active .nav-languages{
+  color: #000;
 }
