--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #2c3442;
-  align-items: flex-end;
+  align-items: center;
   padding: 0 20px;
   min-height: 150px;
   border-radius: 20px;
