--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -20,7 +20,7 @@
     max-width: 550px;
     justify-content: space-between;
     position: relative;
-    max-height: 300px;
+    max-height: 350px;
     gap: 10px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -32,14 +32,15 @@
     flex-direction: column;
     align-items:flex-start;
     padding: 10px;
+    gap: 1rem;
 }
 .news-texts .news-btn{
-    width: 40%;
-    padding: 5px;
+    padding: 8px 25px;
     border-radius: 20px;
     border: none;
     background-color: #2c3442;
     color: #fff;
+    font-weight: bold;
     cursor: pointer;
     transition: 0.5s ease all;
 }
