--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -90,3 +90,171 @@
   font-size: 1.3rem;
 }
 
+@media screen and (max-width:1200px) {
+  .services-cards {
+    width: 80%;
+  }
+  .services-cards .div .card {
+    padding: 0 10px;
+  }
+  /* .services-cards .div .card h3 {
+    font-size: 1.5rem;
+  } */
+  .services-cards .div .card img {
+    width: 120px;
+    height: 120px;
+  }
+  .company .company-statistics .company-title span{
+    font-size: 2rem;
+  }
+  .company-statistics .company-cards div h1 span, .company-statistics .company-cards div h1{
+    font-size: 2rem;
+  }
+  .company-statistics .company-cards div span{
+    font-size: 1.1rem;
+  }
+}
+@media screen and (max-width:992px) {
+  .services-cards {
+    width: 90%;
+  }
+  .services-cards .div .card {
+    padding: 0 10px;
+  }
+  .services-cards .div .card img {
+    width: 120px;
+    height: 120px;
+  }
+  .company .company-statistics .company-title span{
+    font-size: 2rem;
+  }
+  .company-statistics .company-cards div h1 span, .company-statistics .company-cards div h1{
+    font-size: 2rem;
+  }
+  .company-statistics .company-cards div span{
+    font-size: 1.1rem;
+  }
+}
+@media screen and (max-width:768px) {
+  .services-cards {
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+  }
+  .services-cards .div {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+    margin: 0 auto;
+  }
+  .services-cards .div .card {
+    width: 80%;
+    min-height: 200px;
+  }
+  .services-cards .div .card h3 {
+    font-size: 1.3rem;
+  }
+  .services-cards .div .card img {
+    width: 150px;
+    height: 150px;
+  }
+  .company .company-statistics .company-title span{
+    font-size: 2rem;
+  }
+  .company .company-statistics{
+    top: 25%;
+    left: 25%;
+    gap: 20px;
+  }
+  .company-statistics .company-cards{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-content: center;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width:576px) {
+  .services-cards .div .card {
+    width: 90%;
+    padding: 0 10px;
+  }
+  .services-cards .div .card h3 {
+    font-size: 1.3rem;
+  }
+  .services-cards .div .card img {
+    width: 140px;
+    height: 140px;
+  }
+  .company .company-statistics .company-title span{
+    font-size: 1.5rem;
+  }
+  .company .company-img img{
+    min-height: 600px;
+  }
+}
+@media screen and (max-width:380px) {
+  .services-cards .div .card{
+    min-height: 150px;
+  }
+  .services-cards .div .card h3 {
+    font-size: 1rem;
+  }
+  .services-cards .div .card img {
+    width: 120px;
+    height: 120px;
+  }
+  .company .company-statistics .company-title span{
+    font-size: 1.5rem;
+  }
+  .company .company-img img{
+    min-height: 500px;
+  }
+  .company .company-statistics{
+    top: 25%;
+    left: 15%;
+    width: 80%;
+  }
+  .company .company-statistics .company-cards div .div-text{
+    font-size: 0.8rem;
+  }
+  .company .company-statistics .company-cards div h1{
+    font-size: 1.3rem;
+  }
+  .company .company-statistics .company-cards div h1 span{
+    font-size: 1.3rem;
+  }
+}
+@media screen and (max-width:320px) {
+  .services-cards .div .card h3 {
+    font-size: 1.1rem;
+  }
+  .services-cards .div .card img {
+    width: 100px;
+    height: 100px;
+  }
+  .company .company-statistics .company-title span{
+    font-size: 1.3rem;
+  }
+  .company .company-img img{
+    min-height: 400px;
+  }
+  .company .company-statistics{
+    top: 20%;
+    left: 10%;
+    width: 80%;
+  }
+  .company .company-statistics .company-cards div .div-text{
+    font-size: 0.8rem;
+  }
+  .company .company-statistics .company-cards div h1{
+    font-size: 1rem;
+  }
+  .company .company-statistics .company-cards div h1 span{
+    font-size: 1rem;
+  }
+}
+
