--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -1,9 +1,6 @@
 .partners-container{
     width: 100%;
     margin: 0 auto;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* gap: 2rem; */
 }
 .partners-img-container{
     display: grid;
@@ -21,10 +18,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    overflow: hidden;
 }
 .tex-img{
     width: 100%;
-    height: 700px;
+    max-height: 700px;
+    height: 600px;
 }
 .tex-img img{
     max-height: 700px;
@@ -60,4 +59,146 @@
 .tex-content .tex-btn:hover{
     background-color: #fff;
     color: #2c3442;
+}
+
+@media screen and (max-width:1200px) {
+    .partners-img-container{
+        grid-template-columns: repeat(2,50%);
+    }
+    .tex-content{
+        width: 70%;
+        left: 15%;
+        top: 30%;
+    }
+    .tex-content .tex-title{
+        font-size: 2.5rem;
+    }
+    .tex-content .tex-descr{
+        width: 70%;
+    }
+    .tex-content .tex-btn{
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width:992px) {
+    .partners-img-container{
+        grid-template-columns: repeat(2,50%);
+    }
+    .tex-content{
+        width: 80%;
+        left: 10%;
+        top: 30%;
+    }
+    .tex-content .tex-title{
+        font-size: 2rem;
+    }
+    .tex-content .tex-descr{
+        width: 80%;
+    }
+    .tex-content .tex-btn{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .tex-content{
+        width: 90%;
+        top: 20%;
+    }
+    .tex-content .tex-title{
+        font-size: 1.5rem;
+    }
+    .tex-content .tex-descr{
+        width: 90%;
+    }
+    .tex-content .tex-btn{
+        font-size: 0.9rem;
+    }
+    .tex-img img{
+        max-height: 500px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .partners-img-container{
+        grid-template-columns: repeat(1,100%);
+    }
+    .tex-content{
+        width: 90%;
+        top: 20%;
+    }
+    .tex-content .tex-title{
+        font-size: 1.2rem;
+    }
+    .tex-content .tex-descr{
+        width: 90%;
+    }
+    .tex-content .tex-btn{
+        font-size: 0.8rem;
+    }
+    .tex-img{
+        max-height: 500px;
+        height: 400px;
+    }
+    .tex-img img{
+        max-height: 400px;
+    }
+    .partners-img-container img{
+        max-height: 400px;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width:380px) {
+    .tex-content{
+        width: 90%;
+        top: 20%;
+    }
+    .tex-content .tex-title{
+        font-size: 1rem;
+    }
+    .tex-content .tex-descr{
+        width: 90%;
+        font-size: 0.8rem;
+        margin-top: 10px;
+    }
+    .tex-content .tex-btn{
+        font-size: 0.7rem;
+    }
+    .tex-img{
+        max-height: 400px;
+        height: 300px;
+    }
+    .tex-img img{
+        max-height: 300px;
+    }
+    .partners-img-container img{
+        max-height: 300px;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .tex-content .tex-title{
+        font-size: 0.8rem;
+    }
+    .tex-content .tex-descr{
+        width: 90%;
+        font-size: 0.7rem;
+    }
+    .tex-content .tex-btn{
+        font-size: 0.6rem;
+    }
+    .tex-img{
+        max-height: 300px;
+        height: 250px;
+    }
+    .tex-img img{
+        max-height: 250px;
+    }
+    .partners-img-container img{
+        max-height: 250px;
+        height: 100%;
+    }
 }
