--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -63,3 +63,76 @@
     width: 100%;
     height: 100%;
 }
+
+@media screen and (max-width:1200px) {
+    .projects-cards{
+        width: 90%;
+    }
+    .projects-cards .card{
+        min-height: 250px;
+    }
+    .card .card-texts{
+        bottom: -70%;
+    }
+    .card .card-texts .card-title{
+        font-size: 1.8rem;
+    }
+}
+
+@media screen and (max-width:992px) {
+    .projects-cards .card{
+        min-height: 200px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    .card .card-texts .card-title{
+        font-size: 1.5rem;
+    }
+    .card .card-texts .card-descr{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .projects-cards{
+        grid-template-columns: 1fr;
+    }
+    .projects-cards .card{
+        min-height: 300px;
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .projects-cards .card{
+        min-height: 250px;
+    }
+    .card .card-texts .card-title{
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width:380px) {
+    .projects-cards .card{
+        min-height: 200px;
+    }
+    .card .card-texts .card-title{
+        font-size: 1.2rem;
+    }
+    .card .card-texts .card-descr{
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width:320px) {
+    .projects-cards .card{
+        min-height: 150px;
+    }
+    .card .card-texts .card-title{
+        font-size: 1.2rem;
+    }
+    .card .card-texts .card-descr{
+        font-size: 0.8rem;
+    }
+}
