--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -114,6 +114,9 @@
 }
 
 @media screen and (max-width:380px) {
+    .projects-container{
+        margin-bottom: 50px;
+    }
     .projects-cards .card{
         min-height: 200px;
     }
