--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -61,7 +61,7 @@
 }
 .company .company-img img{
   width: 100%;
-  max-height: 500px;
+  max-height: 600px;
 }
 .company .company-statistics{
   display: flex;
@@ -69,11 +69,11 @@
   position: absolute;
   top: 35%;
   left: 10%;
-  gap: 30px;
+  gap: 4rem;
 }
-.company .company-statistics .company-title span{
+.company .company-statistics .company-title .title{
   color: #fff;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 600;
 }
 .company-statistics .company-cards{
@@ -82,12 +82,12 @@
 }
 .company-statistics .company-cards div h1 span, .company-statistics .company-cards div h1{
   color: #fff;
-  font-size: 2.3rem;
+  font-size: 2.5rem;
 }
 .company-statistics .company-cards div span{
   color: #fff;
   font-weight: 600;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 
 @media screen and (max-width:1200px) {
@@ -97,15 +97,12 @@
   .services-cards .div .card {
     padding: 0 10px;
   }
-  /* .services-cards .div .card h3 {
-    font-size: 1.5rem;
-  } */
   .services-cards .div .card img {
     width: 120px;
     height: 120px;
   }
-  .company .company-statistics .company-title span{
-    font-size: 2rem;
+  .company .company-statistics .company-title .title{
+    font-size: 2.5rem;
   }
   .company-statistics .company-cards div h1 span, .company-statistics .company-cards div h1{
     font-size: 2rem;
@@ -125,8 +122,8 @@
     width: 120px;
     height: 120px;
   }
-  .company .company-statistics .company-title span{
-    font-size: 2rem;
+  .company .company-statistics .company-title .title{
+    font-size: 2.3rem;
   }
   .company-statistics .company-cards div h1 span, .company-statistics .company-cards div h1{
     font-size: 2rem;
@@ -160,7 +157,7 @@
     width: 150px;
     height: 150px;
   }
-  .company .company-statistics .company-title span{
+  .company .company-statistics .company-title .title{
     font-size: 2rem;
   }
   .company .company-statistics{
@@ -189,7 +186,7 @@
     width: 140px;
     height: 140px;
   }
-  .company .company-statistics .company-title span{
+  .company .company-statistics .company-title .title{
     font-size: 1.5rem;
   }
   .company .company-img img{
@@ -207,7 +204,7 @@
     width: 120px;
     height: 120px;
   }
-  .company .company-statistics .company-title span{
+  .company .company-statistics .company-title .title{
     font-size: 1.5rem;
   }
   .company .company-img img{
