--- a/src/components/YourHome/YourHome.css
+++ b/src/components/YourHome/YourHome.css
@@ -27,7 +27,7 @@
     width: 100%;
   }
   
-  .carousel-img {
+  .carousel-card .carousel-img {
     width: 100%;
     height: 400px;
     border-radius: 8px; 
@@ -104,13 +104,13 @@
     } 
   }
   @media screen and (max-width:576px) {
-    .carousel-img{
+    .carousel-card .carousel-img{
       height: 300px;
     }
   }
 
   @media screen and (max-width:380px) {
-    .carousel-img{
+    .carousel-card .carousel-img{
       height: 250px;
     } 
     .carousel-indicators {
@@ -124,7 +124,7 @@
   }
 
   @media screen and (max-width:320px) {
-    .carousel-img{
+    .carousel-card .carousel-img{
       height: 200px;
     } 
   }
