--- a/src/components/Partners/Partners.css
+++ b/src/components/Partners/Partners.css
@@ -29,7 +29,7 @@
     max-height: 700px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 .tex-content{
     width: 50%;
