--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -115,16 +115,19 @@
         margin: 0 auto;
         flex-direction: column;
         gap: 0;
+        padding-bottom: 20px;
     }
     .news-texts .news-btn{
         padding: 8px 40px;
     }
     .news-texts{
         width: 100%;
+        max-height: 50%;
+        justify-content: flex-start;
     }
     .news-card .news-image{
         width: 100%;
-        max-height: 50%;
+        max-height: 60%;
     }
     .news-card .news-image img{
         border-top-left-radius: 20px;
