--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -161,6 +161,31 @@
         max-height: 50%;
     }
 }
+@media screen and (max-width:460px) {
+    .news-cards{
+        grid-template-columns: 1fr;
+        width: 95%;
+    }
+    .news-cards .news-card{
+        max-height: 500px;
+        max-width: 100%;
+        margin: 0 auto;
+        flex-direction: column;
+        gap: 0;
+    }
+    .news-texts .news-btn{
+        padding: 8px 30px;
+    }
+    .news-texts{
+        width: 100%;
+        padding: 15px;
+    }
+    .news-card .news-image{
+        width: 100%;
+        max-height: 50%;
+    }
+}
+
 @media screen and (max-width:380px) {
     .news-container{
         padding: 20px 0;
