--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -122,7 +122,7 @@ span{
         font-size: 16px;
     }
 }
-@media screen and (max-width:380px) {
+@media screen and (max-width:460px) {
     .footer-cards{
         gap: 20px;
         flex-wrap: wrap;
@@ -133,6 +133,8 @@ span{
     .footer-cards .footer-card{
         width: 40%;
     }
+}
+@media screen and (max-width:380px) {
     .footer-card:nth-child(1) .logo img{
         width: 80px;
     }
