--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -95,6 +95,14 @@
     }
 }
 
+@media screen and (max-width:460px) {
+    .main-content .main-buttons a{
+        max-width: 150px;
+        width: 150px;
+        text-align: center;
+    }
+}
+
 @media screen and (max-width:380px) {
     .main-content h1{
         font-size: 2rem;
@@ -104,9 +112,9 @@
     }
     .main-content .main-buttons a{
         font-size: 0.9rem;
-        padding: 10px;
         width: 130px;
-        text-align: center;
+        padding: 10px 0;
+        max-width: 130px;
     }
 }
 
